--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   "dependencies": {
     "@types/lodash": "^4.14.182",
     "lodash": "^4.17.21",
+    "mockjs": "^1.1.0",
     "vue": "^3.2.37",
     "vue-router": "4"
   },
   "devDependencies": {
     "@types/node": "^18.6.1",
     "@vitejs/plugin-vue": "^3.0.0",
+    "autoprefixer": "^10.4.7",
     "path": "^0.12.7",
+    "postcss": "^8.4.14",
+    "sass": "^1.54.0",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
+    "vite-plugin-mock": "^2.9.6",
     "vue-tsc": "^0.38.4"
   }
 }
