--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.182",
+    "axios": "^0.27.2",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "vue": "^3.2.37",
