--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.182",
+    "@vee-validate/i18n": "^4.6.2",
+    "@vee-validate/rules": "^4.6.2",
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
+    "vee-validate": "^4.6.2",
     "vue": "^3.2.37",
-    "vue-router": "4"
+    "vue-router": "4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^18.6.1",
